--- a/Website/Views/Home/Index.cshtml
+++ b/Website/Views/Home/Index.cshtml
@@ -62,7 +62,7 @@
             <h3 class="score"></h3>
         </section>
 
-        <section>
+        <section style="margin: 10rem 2rem;">
             <img src="/assets/img/planet/sun.gif" alt="Sun" title="You can't go here" style="max-width: 20rem;box-shadow: 0 0 8rem 1.6rem orange;border-radius: 50%;" />
             <img src="/assets/img/planet/mercury.gif" alt="Mercury" title="Go to mercury" data-index="0" data-click="0" data-lock="q" style="max-width: 6rem;"/>
             <img src="/assets/img/planet/venus.gif" alt="Venus" title="Go to venus" data-index="1" data-click="1" data-lock="w" style="max-width: 7rem;"/>
